--- a/backend/package.json
+++ b/backend/package.json
@@ -24,5 +24,8 @@
     "nodemon": "^2.0.14",
     "path": "^0.12.7",
     "sequelize": "^6.12.0-alpha.1"
+  },
+  "devDependencies": {
+    "typescript": "^4.5.2"
   }
 }
