--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,7 @@
     "sequelize": "^6.12.0-alpha.1"
   },
   "devDependencies": {
+    "sequelize-cli": "^6.3.0",
     "typescript": "^4.5.2"
   }
 }
