--- a/backend/package.json
+++ b/backend/package.json
@@ -27,7 +27,6 @@
     "sequelize": "^6.12.0-alpha.1"
   },
   "devDependencies": {
-    "sequelize-cli": "^6.3.0",
-    "typescript": "^4.5.2"
+    "sequelize-cli": "^6.3.0"
   }
 }
