--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.26.0",
     "core-js": "^3.6.5",
+    "moment": "^2.29.1",
     "tailwindcss": "^3.0.22",
     "vue": "^3.2.30",
     "vue-router": "^4.0.12",
