--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@headlessui/vue": "^1.5.0",
     "axios": "^0.26.0",
     "core-js": "^3.6.5",
     "moment": "^2.29.1",
