--- a/backend/package.json
+++ b/backend/package.json
@@ -24,7 +24,8 @@
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.14",
     "path": "^0.12.7",
-    "sequelize": "^6.12.0-alpha.1"
+    "sequelize": "^6.12.0-alpha.1",
+    "validator": "^13.7.0"
   },
   "devDependencies": {
     "sequelize-cli": "^6.3.0"
