--- a/backend/config/config.json
+++ b/backend/config/config.json
@@ -14,10 +14,10 @@
     "dialect": "mysql"
   },
   "production": {
-    "username": "root",
-    "password": null,
-    "database": "database_production",
-    "host": "127.0.0.1",
+    "username": "sql11477116",
+    "password": "aVCzcwNaNH",
+    "database": "sql11477116",
+    "host": "sql11.freemysqlhosting.net",
     "dialect": "mysql"
   }
 }
