--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "@headlessui/vue": "^1.5.0",
     "axios": "^0.26.0",
     "core-js": "^3.6.5",
+    "dotenv": "^16.0.0",
     "moment": "^2.29.1",
     "tailwindcss": "^3.0.22",
     "vue": "^3.2.30",
