--- a/backend/config/config.json
+++ b/backend/config/config.json
@@ -1,16 +1,16 @@
 {
   "development": {
-    "username": "root",
-    "password": "",
-    "database": "groupomania",
-    "host": "127.0.0.1",
+    "username": "sql11477116",
+    "password": "aVCzcwNaNH",
+    "database": "sql11477116",
+    "host": "sql11.freemysqlhosting.net",
     "dialect": "mysql"
   },
   "test": {
-    "username": "root",
-    "password": null,
-    "database": "database_test",
-    "host": "127.0.0.1",
+    "username": "sql11477116",
+    "password": "aVCzcwNaNH",
+    "database": "sql11477116",
+    "host": "sql11.freemysqlhosting.net",
     "dialect": "mysql"
   },
   "production": {
