suppression config cloudinary

--- a/backend/config/config.json
+++ b/backend/config/config.json
@@ -2,7 +2,7 @@
   "development": {
     "username": "root",
     "password": "",
-    "database": "groupomania",
+    "database": "test-groupomania",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
@@ -14,10 +14,10 @@
     "dialect": "mysql"
   },
   "production": {
-    "username": "sql11477116",
-    "password": "aVCzcwNaNH",
-    "database": "sql11477116",
-    "host": "sql11.freemysqlhosting.net",
+    "username": "root",
+    "password": "",
+    "database": "groupomania",
+    "host": "127.0.0.1",
     "dialect": "mysql"
   }
 }
